# agentshield

./: .gitignore  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  README.md  agentshield.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  dlp-pattern-request.yml  feature-request.yml  policy-template-request.yml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project-status.md  project_overview.md  style_conventions.md  suggested_commands.md
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
assets/: dashboard.html
src/: error.rs  lib.rs  main.rs
src/ask/: mod.rs  telegram.rs  terminal.rs
src/cli/: integrate.rs  mod.rs  prompt.rs
src/dlp/: mod.rs  patterns.rs
src/log/: export.rs
src/logging/: export.rs  mod.rs
src/notification/: mod.rs  telegram.rs
src/policy/: config.rs  evaluator.rs  mod.rs  reload.rs
src/proxy/: connect.rs  mod.rs  tls.rs
src/web/: ask.rs  mod.rs
templates/: claude-code-default.toml  openclaw-default.toml  strict.toml
tests/: integration_test.rs  policy_test.rs  proxy_test.rs
