[package]
name = "agentshield"
version = "0.1.0"
edition = "2024"
description = "AI Agent Egress Firewall - Default-deny egress control for AI agents"
license = "Apache-2.0"

[dependencies]
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3"
